Update the website

--- a/book.bib
+++ b/book.bib
@@ -97,3 +97,49 @@
 	year = {1973},
 	pages = {159--183}
 }
+
+@misc{noauthor_build_nodate,
+	title = {Build software better, together},
+	url = {https://github.com},
+	abstract = {GitHub is where people build software. More than 19 million people use GitHub to discover, fork, and contribute to over 52 million projects.},
+	urldate = {2017-02-07},
+	journal = {GitHub},
+	file = {Snapshot:/Users/raw996/Library/Application Support/Zotero/Profiles/ws1t4xxj.default/zotero/storage/TAH55RZW/github.com.html:text/html}
+}
+
+@book{fuller_sampling_2009,
+	address = {Hoboken, NJ, USA},
+	title = {Sampling {Statistics}},
+	isbn = {978-0-470-52355-1 978-0-470-45460-2},
+	url = {http://doi.wiley.com/10.1002/9780470523551},
+	language = {en},
+	urldate = {2017-04-10},
+	publisher = {John Wiley \& Sons, Inc.},
+	author = {Fuller, Wayne A.},
+	month = jul,
+	year = {2009},
+	note = {DOI: 10.1002/9780470523551}
+}
+
+@misc{friedman_tools_2013,
+	title = {Tools of the trade: when to use those sample weights},
+	url = {http://blogs.worldbank.org/impactevaluations/tools-of-the-trade-when-to-use-those-sample-weights},
+	urldate = {2017-04-11},
+	author = {Friedman, Jed},
+	month = mar,
+	year = {2013}
+}
+
+@techreport{solon_what_2013,
+	address = {Cambridge, MA},
+	title = {What {Are} {We} {Weighting} {For}?},
+	url = {http://www.nber.org/papers/w18859.pdf},
+	language = {en},
+	number = {w18859},
+	urldate = {2017-04-11},
+	institution = {National Bureau of Economic Research},
+	author = {Solon, Gary and Haider, Steven and Wooldridge, Jeffrey},
+	month = feb,
+	year = {2013},
+	note = {DOI: 10.3386/w18859}
+}
