--- a/docs/which-stats-method.tex
+++ b/docs/which-stats-method.tex
@@ -153,9 +153,18 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\chapter{Syllabus}\label{intro}
+\chapter{Syllabus}\label{syllabus}
 
 \section{Logistics}\label{logistics}
+
+Instructor: Richard White
+{[}\href{mailto:richard.white@fhi.no}{\nolinkurl{richard.white@fhi.no}}{]}
+Time: 09:00 - 11:45, 18th September 2017 Location: Main auditorium, L8,
+Lindern Campus
+
+\chapter{File setup}\label{intro}
+
+\section{blah}\label{blah}
 
 Instructor: Richard White
 {[}\href{mailto:richard.white@fhi.no}{\nolinkurl{richard.white@fhi.no}}{]}
