--- a/docs/which-stats-method.tex
+++ b/docs/which-stats-method.tex
@@ -159,8 +159,10 @@
 
 Instructor: Richard White
 {[}\href{mailto:richard.white@fhi.no}{\nolinkurl{richard.white@fhi.no}}{]}
-Time: 09:00 - 11:45, 18th September 2017 Location: Main auditorium, L8,
-Lindern Campus
+
+Time: 09:00 - 11:45, 18th September 2017
+
+Location: Main auditorium, L8, Lindern Campus
 
 \chapter{File setup}\label{intro}
 
