Update the website

--- a/index.Rmd
+++ b/index.Rmd
@@ -16,23 +16,21 @@ description: "A short course in learning which statistical methods should be app
 
 ## Logistics
 
+Language: English
+
 Instructor: Richard White [richard.white@fhi.no]
 
 Time: 09:00 - 11:45, 18th September 2017
 
 Location: Main auditorium, L8, Lindern Campus
 
-## Rationale
+## Rationale and Course Aims
 
-This course exists to provide a basic awareness of general statistical methodology that can be useful in infectious diseases, environmental medicine, and labwork.
-
-## Course Aims
-
-By the end of this course, students will be able to identify appropriate statistical methods for a variety of circumstances.
+This course will provide a basic overview of general statistical methodology that can be useful in the areas of infectious diseases, environmental medicine, and labwork. By the end of this course, students will be able to identify appropriate statistical methods for a variety of circumstances.
 
 ## Course Specific Learning Outcomes
 
-1. Identify continuous, categorical, and censored data
+1. Identify continuous, categorical, and censored variables
 2. Identify 
 
 ## Format and Procedures
