--- a/index.Rmd
+++ b/index.Rmd
@@ -26,15 +26,15 @@ Language: English
 
 ## Format and Procedures
 
-09:00 to 10:00: Lecture 1
+09:00 - 10:00: Lecture 1
 
-10:00 to 10:10: Break
+10:00 - 10:10: Break
 
-10:10 to 11:10: Lecture 2
+10:10 - 11:10: Lecture 2
 
-10:10 to 10:15: Break
+10:10 - 10:15: Break
 
-11:15 to 11:45: Questions and Answers
+11:15 - 11:45: Real examples from FHI
 
 ## Rationale and Course Aims
 
@@ -49,38 +49,19 @@ Lecture 1
 1. Identify continuous, categorical, count, and censored variables
 2. Identify when your data does not have any dependencies (i.e. all observations are independent of each other)
 3. Identify when your data has complicated dependencies that need to be taken into account (longitudinal data, clustered data, matched data)
-4. Identify when linear, logistic, poisson, negative binomial, and cox regression models should be used
+4. Identify when linear and logistic regression models should be used
+5. Identify when poisson, negative binomial, and cox regression models should be used
 
 Lecture 2
 
-5. Identify when mixed effects regression models should be used
-6. Understand the similarities between t-tests, ANOVA, and regression
-7. Understand the different imputation methods used when lab data is below the limit of detection (LOD)
+6. Identify when mixed effects regression models should be used
+7. Understand the similarities between t-tests, ANOVA, and regression
+8. Understand the different imputation methods used when lab data is below the limit of detection (LOD)
+9. Understanding best practicies for data files and project folders
 
 ## Course Requirements
 
+To participate in this course, it is recommended that you have some experience with either research or data.
 
+For the last 30 minutes of the course, we will be going through examples of analyses performed at FHI, and identifying which statistical methods are appropriate. If you would like your analysis to be featured/included in this section, please send an email to richard.white@fhi.no briefly describing your problem.
 
-I. Rationale:  
-Why does this course exist? How does it fit in with the rest of the field/area’s curriculum? 
-
-II. Course Aims and Outcomes:  
-Aims
-Thinking from the prospective students’ point of view, what general outcomes is the course designed to achieve? How will it contribute to them professionally?
-
-Specific Learning Outcomes:
-By the end of this course, students will: 
-List as specifically as possible the learning outcomes the course is intended to produce. It is helpful here to think about the kinds of evidence you will need to assess the students’ learning as your outcomes should drive your assessment and grading schema. Kinds of evidence can be manifest in what students say, do, think and/or feel. What they say (as on an exam, paper, project, homework, etc., or in class discussion) is a reflection of their thinking. Feelings are often neglected in specifying course or class outcomes, yet the research on the role of affect (emotions and feelings) in learning has been well documented and has been shown to have a significant influence and integration with cognitive learning. For example, if you were teaching a course on ecology it would be difficult to do without addressing human values, which have an affective aspect to them. If certain psychomotor skills are intended to be developed, the evidence will be in doing (as in a lab course where actions like titration, completing successful assays, collecting meaningful data and analyzing it are regular expectations) they should be articulated as clearly as possible. A well stated outcome has two components: substance (content/subject matter like osmosis or absorption) and form: what action must the student perform with regards to the substance (compare and contrast, evaluate, analyze, apply, etc.)
-
-III. Format and Procedures:  
-How is the course structured and how will classes be carried out? What behavioral expectations does the instructor have for the students in class? This is where specifications for attendance, participation, respect for others, etc. should be spelled out to act as a behavioral guide. If the course has multiple formats (like lecture & recitation, lab and discussion, group learning projects and/or presentations) these should be explained clearly
-IV.  My Assumptions
-This is a section where the instructor can communicate his or her personal assumptions and/or biases regarding the course content to set it off from other similar courses and other instructors. Does the instructor have a unique operational definition for some of the core course concepts? What principles and/or beliefs about either the content or how to effectively learn the content held by the instructor would it be helpful for the students to know up front?
-V. Course Requirements:  Whatever tasks and assignments you include in your course should be aligned with the specified learning outcomes (final learning state, skills, knowledge, attitudes and values the students leave the course with) you have defined and specified earlier.
-
-1. Class attendance and participation policy:  
-
-2. Course readings:  
- 	(a) Required text: 
- 
-(b) Background readings, course packet available in the university bookstore? Use of course Blackboard web site? Download and bring handouts to class?
