--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,28 +1,68 @@
-# File setup {#intro}
+# Lecture 1 {#intro}
 
-## blah
+## Variable types
 
-Instructor: Richard White [richard.white@fhi.no]
-Time: 09:00 - 11:45, 18th September 2017
-Location: Main auditorium, L8, Lindern Campus
+### Continuous variables
 
-## Rationale
-You can label chapter and section titles using `{#label}` after them, e.g., we can reference Chapter \@ref(intro). If you do not manually label them, there will be automatic labels anyway, e.g., .
+A variable is continuous there is a meaningful "distance" between values.
 
-Figures and tables with captions will be placed in `figure` and `table` environments, respectively.
+### Categorical variable
 
-```{r nice-fig, fig.cap='Here is a nice figure!', out.width='80%', fig.asp=.75, fig.align='center'}
-par(mar = c(4, 4, .1, .1))
-plot(pressure, type = 'b', pch = 19)
-```
+A variable is categorical if there is no meaningful "distance" between values.
 
-Reference a figure by its code chunk label with the `fig:` prefix, e.g., see Figure \@ref(fig:nice-fig). Similarly, you can reference tables generated from `knitr::kable()`, e.g., see Table \@ref(tab:nice-tab).
+### Censored variables
 
-```{r nice-tab, tidy=FALSE}
-knitr::kable(
-  head(iris, 20), caption = 'Here is a nice table!',
-  booktabs = TRUE
-)
-```
+Censored variables are a subset of continuous variables
 
-You can write citations, too. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr**
+### Count variables
+
+Count variables are a subset of continuous variables.
+
+## Hypothesis testing
+
+In science, we are interested in testing hypotheses. Statistics allows us to formally test our hypotheses.
+
+In statistical testing we have a **null** hypothesis ($\text{H}_0$) and an **alternative** hypothesis ($\text{H}_1$). We assume the null hypothesis is true and try to find the probability of what we have observed (or something more extreme). If our observations are very unlikely (assuming the null hypothesis is true) then we reject the null hypothesis in favor of the alternative hypothesis.
+
+For example:
+
+$\text{H}_0$: It is summer
+
+$\text{H}_1$: It is not summer
+
+Our observed data for today is an average temperature of -20C today. Assuming it is summer, how likely is it that today's average temperature will be -20C? Not very likely! We therefore reject $\text{H}_0$ ("it is summer") in favor of $\text{H}_1$ ("it is not summer"). That is, we conclude that it is not summer today.
+
+## t-tests
+
+### What is a t-test?
+
+A t-test compares the means of two groups.
+
+$\text{H}_0: \mu_0 = \mu_1$
+
+$\text{H}_1: \mu_0 \ne \mu_1$
+
+Or rephrased:
+
+$\text{H}_0$: The average height of men is equal to the average height of women
+
+$\text{H}_1$: The average height of men is not equal to the average height of women
+
+
+### Paired t-test
+
+### Unpaired t-test
+
+## Identifying when non-parametric t-test equivalents should be used
+
+## Identifying when ANOVA should be used
+
+## Identifying when linear regression should be used
+
+## Identifying the similarities between t-tests, ANOVA, and regression
+
+## Identifying when logistic regression models should be used
+
+## Identifying when Poisson/negative binomial and cox regression models should be used
+
+## Identifying when chi-squared/fisher’s exact test should be used
