Update the website

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -13,7 +13,13 @@ For example:
 - Height
 - BMI
 - Blood pressure
-- _______
+
+Come up with 5 of your own examples:
+- 
+- 
+- 
+- 
+- 
 
 ### Binary variables
 
